WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
309206
[JSC] Record RegExp legacy properties on limit abort in Newlines split fast path
https://bugs.webkit.org/show_bug.cgi?id=309206
Summary
[JSC] Record RegExp legacy properties on limit abort in Newlines split fast path
Sosuke Suzuki
Reported
2026-03-04 16:38:25 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Sosuke Suzuki
Comment 1
2026-03-04 16:39:15 PST
Pull request:
https://github.com/WebKit/WebKit/pull/59934
EWS
Comment 2
2026-03-09 23:07:55 PDT
Committed
308958@main
(763a3ed2aee0): <
https://commits.webkit.org/308958@main
> Reviewed commits have been landed. Closing PR #59934 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-03-09 23:08:11 PDT
<
rdar://problem/172154885
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug